[package]
name = "icaRS"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["local-offset", "formatting"] }
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2.0"
